welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:8: error: not found: value baisserBrosse
 	baisserBrosse()
        ^