welcome.lessons.welcome.methods.picture.PictureMono2.scala.code
override def run() {
  def faireMotif(){
  avance()
  baisseBrosse()
  	avance()
  leveBrosse()
  gauche()
 	baisserBrosse()
  	avance()
  leveBrosse()
  recule()
  droite()
  baisseBrosse()
  	avance()
 	leveBrosse()
  
}

faireMotif()
}

